--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,14 +1,3 @@
-
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
 font pango:monospace 8
 
 
@@ -24,19 +13,6 @@ client.placeholder      $bg     $bg     $fg  $bg       $bg
 
 client.background       $bg
 
-
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn't scale on retina/hidpi displays.
-
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
 set $up l
@@ -44,13 +20,10 @@ set $down k
 set $left j
 set $right semicolon
 
-
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
 
 # start a terminal
-#bindsym Mod1+Return exec i3-sensible-terminal
-#bindsym Mod1+Return exec st
 bindsym Mod1+Return exec termite
 
 # kill focused window
@@ -58,18 +31,10 @@ bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym Mod1+d exec dmenu_run -nb "$fg" -nf "$bg" -sb "$bg" -sf "$fg"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
-
-# i3 help
-#bindsym Mod1+m exec xrandr --output eDP-1-1 --right-of HDMI-1-1
-#bindsym Mod1+m exec xrandr --auto --output eDP-1 --mode 1920x1080 --right-of HDMI-1
 
 # Monitors
-set $m1 eDP-1-1
-set $m2 HDMI-1-1
+#set $m1 eDP-1-1
+#set $m2 HDMI-1-1
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -199,13 +164,7 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#}
 # gaps
-
 for_window [class="^.*"] border pixel 2 
 gaps inner 15 
 gaps outer 15
@@ -219,7 +178,7 @@ bindsym Mod1+ctrl+l exec bash ~/Documents/bash/lockscreen/lockscreen.sh
 bindsym Mod1+ctrl+d exec bash ~/Documents/bash/dockterm/dockterm.sh
 bindsym Mod1+ctrl+s exec termite -e "nvim"
 bindsym Print exec flameshot gui
-bindsym Mod1+b exec background
+bindsym Mod1+b exec ~/Documents/bash/background/background.sh
 bindsym Mod1+m exec sleep 1 && xset dpms force offer
 
 # System applications
@@ -228,36 +187,4 @@ exec --no-startup-id xrandr --auto --output $m1 --mode 1920x1080 --right-of $m2
 exec --no-startup-id bash ~/.config/polybar/launch.sh
 exec --no-startup-id wal -i ~/Wallpapers/leafs.jpg
 
-# Applicaton workspaces
-#assign [class="Visual Studio Code"] $ws2
-#assign [class="Atom"] $ws2
-#assign [class="Eclipse IDE"] $ws2
-#assign [class="KeepassXC"] $ws3
-#assign [class="teamspeak"] $ws10
-
-#Workspace output
-#workspace $ws1 output $m2
-#workspace $ws2 output $m2
-#workspace $ws3 output $m2
-#workspace $ws4 output $m2
-#workspace $ws9 output $m1
-#workspace $ws10 output $m1
-
-#Startup windows
-#exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/google-chrome'
-#exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/keepassxc'
-#exec --no-startup-id i3-msg 'workspace 4; exec /usr/bin/thunderbird'
-#exec --no-startup-id i3-msg 'workspace 10; exec /usr/local/bin/teamspeak'
-
 exec_always ~/Documents/python/i3scripts/autoname_workspaces.py
-######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.config/i3/config (or $XDG_CONFIG_HOME/i3/config if set) or
-# ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-#exec i3-config-wizard
