--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,17 +1,3 @@
-font pango:monospace 8
-
-
-set_from_resource $fg i3wm.color7
-set_from_resource $bg i3wm.color2
-
-# class                 border  backgr. text indicator child_border
-client.focused          $bg     $bg     $fg  $bg       $bg
-client.focused_inactive $bg     $bg     $fg  $bg       $bg
-client.unfocused        $bg     $bg     $fg  $bg       $bg
-client.urgent           $bg     $bg     $fg  $bg       $bg
-client.placeholder      $bg     $bg     $fg  $bg       $bg
-
-client.background       $bg
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
@@ -30,7 +16,7 @@ bindsym Mod1+Return exec termite
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run -nb "$fg" -nf "$bg" -sb "$bg" -sf "$fg"
+bindsym Mod1+d exec dmenu_run
 
 # Monitors
 #set $m1 eDP-1-1
@@ -165,8 +151,8 @@ mode "resize" {
 bindsym Mod1+r mode "resize"
 
 # gaps
-for_window [class="^.*"] border pixel 2 
-gaps inner 15 
+for_window [class="^.*"] border pixel 2
+gaps inner 15
 gaps outer 15
 
 #application keybindings
