Clean polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -6,12 +6,10 @@ primary = ${xrdb:color1:#222}
 secondary = ${xrdb:color2:#222}
 alert = ${xrdb:color3:#222}
 
-[bar/example]
-;monitor = ${env:MONITOR:HDMI-1-1}
+[bar/top]
 width = 100%
 height = 30
-;offset-x = 1%
-;offset-y = 1%
+
 radius = 6.0
 fixed-center = falset
 
@@ -29,32 +27,15 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-;font-0 = Font Awesome 5 Free;pixelsize=10;0
-;font-0 = Font Awesome 5 Free,Font Awesome 5 Free Solid:size=12;2
-;font-1 = Font Awesome 5 Free,Font Awesome 5 Free Regular:size=12;2
-;font-2 = Font Awesome 5 Brands,Font Awesome 5 Brands Regular:size=12;2
-;font-0 = Font Awesome 5 Free-Regular-400:pixelsize=10;0
 font-0 = Verdana:pixelsize=12;0
-;font-1 = Droid Sans Mono for Powerline Plus Nerd File Types Mono:pixelsize=20;5
 font-1 = Hurmit Nerd Font
 
 modules-left = i3
 modules-center = xwindow
-;modules-right = filesystem vpn eth memory cpu temperature date
 modules-right = filesystem eth memory cpu gpu date
 
 tray-position = right
 tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
@@ -103,10 +84,8 @@ interval = 25
 mount-0 = /
 mount-1 = /data
 
-label-mounted = %{F-colors.secondary}%mountpoint%%{F-}: %percentage_used%%
-;label-mounted = %mountpoint%: %percentage_used%%
+label-mounted = %mountpoint%: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
-;label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
@@ -130,37 +109,27 @@ label-empty-padding = 2
 [module/i3]
 type = internal/i3
 
-;ws-icon-0 = "1;"
-;ws-icon-default = ""
-
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-;pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
-; focused = Active workspace on focused monitor
 label-focused = %name%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
-; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
-; visible = Active workspace on unfocused monitor
 label-visible = %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
-; urgent = Workspace with urgency hint set
 label-urgent = %name%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
