Add github notification

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,13 +32,22 @@ font-1 = Hurmit Nerd Font
 
 modules-left = i3
 modules-center = xwindow
-modules-right = filesystem eth memory cpu gpu date
+modules-right = github filesystem eth memory cpu gpu date
 
 tray-position = right
 tray-padding = 2
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
+
+[module/github]
+type = internal/github
+token = ${file:~/.config/.github-notifications}
+empty-notifications = false
+interval = 10
+api-url = https://api.github.com/
+label = : %notifications%
+
 
 [module/gpu]
 type = custom/script
