--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,7 +87,7 @@ bindsym Mod1+w layout tabbed
 bindsym Mod1+e layout toggle split
 
 # toggle tiling / floating
-bindsym Mod1+Shif+space floating toggle
+bindsym Mod1+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym Mod1+space focus mode_toggle
@@ -158,11 +158,16 @@ mode "resize" {
 bindsym Mod1+r mode "resize"
 
 # gaps
-for_window [class="^.*"] border pixel 2 
-gaps inner 15 
+for_window [class="^.*"] border pixel 2
+gaps inner 15
 gaps outer 15
 
-#application keybindings
+# floating rule's
+for_window [class="feh"] floating enable
+for_window [class="mpv"] floating enable
+for_window [class="zathura"] floating enable
+
+# application keybindings
 bindsym Mod1+ctrl+g exec google-chrome-stable
 bindsym Mod1+ctrl+k exec keepassxc
 bindsym Mod1+ctrl+p exec pavucontrol
@@ -174,7 +179,7 @@ bindsym Print exec flameshot gui
 bindsym Mod1+b exec ~/Documents/bash/background/background.sh
 bindsym Mod1+m exec sleep 1 && xset dpms force offer
 
-# System applications
+# system applications
 exec --no-startup-id compton --config ~/.config/compton.conf
 #exec --no-startup-id xrandr --auto --output $m1 --mode 1920x1080 --right-of $m2
 exec --no-startup-id bash ~/.config/polybar/launch.sh
