--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,8 +28,8 @@ bindsym Mod1+Return exec termite
 # kill focused window
 bindsym Mod1+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run
+# start rofi
+bindsym Mod1+d exec rofi -show run
 
 # Monitors
 #set $m1 eDP-1-1
@@ -183,6 +183,6 @@ bindsym Mod1+m exec sleep 1 && xset dpms force off
 exec --no-startup-id compton --config ~/.config/compton.conf
 #exec --no-startup-id xrandr --auto --output $m1 --mode 1920x1080 --right-of $m2
 exec --no-startup-id bash ~/.config/polybar/launch.sh
-exec --no-startup-id wal -i ~/Wallpapers/climbing.png
+exec --no-startup-id wal -i ~/Wallpapers/linuxterminal.png
 
 exec_always ~/Documents/python/i3scripts/autoname_workspaces.py
