--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,7 @@
 font pango:monospace 8
 
+set $mod Mod1
+
 set_from_resource $fg i3wm.color7
 set_from_resource $bg i3wm.color2
 
@@ -19,21 +21,21 @@ set $down k
 set $left j
 set $right semicolon
 
-# use Mouse+Mod1 to drag floating windows to their wanted position
-floating_modifier Mod1
+# use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
 # start a terminal
-bindsym Mod1+Return exec termite
+bindsym $mod+Return exec termite
 
 # kill focused window
-bindsym Mod1+Shift+q kill
+bindsym $mod+Shift+q kill
 
 # start rofi
-bindsym Mod1+d exec rofi -show run
+bindsym $mod+d exec rofi -show run
 
 # Monitors
-#set $m1 eDP-1-1
-#set $m2 HDMI-1-1
+set $m1 HDMI-0
+set $m2 HDMI-1
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -49,92 +51,104 @@ set $ws9 "9"
 set $ws10 "10"
 
 # change focus
-bindsym Mod1+$left focus left
-bindsym Mod1+$down focus down
-bindsym Mod1+$up focus up
-bindsym Mod1+$right focus right
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
 
 # alternatively, you can use the cursor keys:
-bindsym Mod1+Left focus left
-bindsym Mod1+Down focus down
-bindsym Mod1+Up focus up
-bindsym Mod1+Right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
 
 # move focused window
-bindsym Mod1+Shift+$left move left
-bindsym Mod1+Shift+$down move down
-bindsym Mod1+Shift+$up move up
-bindsym Mod1+Shift+$right move right
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
 
 # alternatively, you can use the cursor keys:
-bindsym Mod1+Shift+Left move left
-bindsym Mod1+Shift+Down move down
-bindsym Mod1+Shift+Up move up
-bindsym Mod1+Shift+Right move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym Mod1+h split h
+bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym Mod1+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym Mod1+f fullscreen toggle
+bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym Mod1+s layout stacking
-bindsym Mod1+w layout tabbed
-bindsym Mod1+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym Mod1+Shift+space floating toggle
+bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym Mod1+space focus mode_toggle
+bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod1+a focus parent
+bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym Mod1+d focus child
+#bindsym $mod+d focus child
 
 # move the currently focused window to the scratchpad
-bindsym Mod1+Shift+minus move scratchpad
+bindsym $mod+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym Mod1+minus scratchpad show
+bindsym $mod+minus scratchpad show
 
 # switch to workspace
-bindsym Mod1+1 workspace number $ws1
-bindsym Mod1+2 workspace number $ws2
-bindsym Mod1+3 workspace number $ws3
-bindsym Mod1+4 workspace number $ws4
-bindsym Mod1+5 workspace number $ws5
-bindsym Mod1+6 workspace number $ws6
-bindsym Mod1+7 workspace number $ws7
-bindsym Mod1+8 workspace number $ws8
-bindsym Mod1+9 workspace number $ws9
-bindsym Mod1+0 workspace number $ws10
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace number $ws1
-bindsym Mod1+Shift+2 move container to workspace number $ws2
-bindsym Mod1+Shift+3 move container to workspace number $ws3
-bindsym Mod1+Shift+4 move container to workspace number $ws4
-bindsym Mod1+Shift+5 move container to workspace number $ws5
-bindsym Mod1+Shift+6 move container to workspace number $ws6
-bindsym Mod1+Shift+7 move container to workspace number $ws7
-bindsym Mod1+Shift+8 move container to workspace number $ws8
-bindsym Mod1+Shift+9 move container to workspace number $ws9
-bindsym Mod1+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
+
+#Monitor Wokspace
+workspace number $ws1 output $m1 
+workspace number $ws2 output $m1
+workspace number $ws3 output $m1
+workspace number $ws4 output $m1
+
+workspace number $ws5 output $m2
+workspace number $ws6 output $m2
+workspace number $ws7 output $m2
+workspace number $ws8 output $m2
+workspace number $ws9 output $m2
 
 # reload the configuration file
-bindsym Mod1+Shift+c reload
+bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+r restart
+bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -149,13 +163,13 @@ mode "resize" {
   bindsym Up          resize shrink height 1 px or 1 ppt
   bindsym Right       resize grow width 1 px or 1 ppt
 
-  # back to normal: Enter or Escape or Mod1+r
+  # back to normal: Enter or Escape or $mod+r
   bindsym Return mode "default"
   bindsym Escape mode "default"
-  bindsym Mod1+r mode "default"
+  bindsym $mod+r mode "default"
 }
 
-bindsym Mod1+r mode "resize"
+bindsym $mod+r mode "resize"
 
 # gaps
 for_window [class="^.*"] border pixel 2 
@@ -168,21 +182,23 @@ for_window [class="mpv"] floating enable
 for_window [class="zathura"] floating enable
 
 # application keybindings
-bindsym Mod1+ctrl+g exec google-chrome-stable
-bindsym Mod1+ctrl+k exec keepassxc
-bindsym Mod1+ctrl+p exec pavucontrol
-bindsym Mod1+ctrl+n exec nautilus
-bindsym Mod1+ctrl+l exec bash ~/Documents/bash/lockscreen/lockscreen.sh
-bindsym Mod1+ctrl+d exec bash ~/Documents/bash/dockterm/dockterm.sh
-bindsym Mod1+ctrl+s exec termite -e "nvim"
+bindsym $mod+ctrl+g exec google-chrome-stable
+bindsym $mod+ctrl+k exec keepassxc
+bindsym $mod+ctrl+p exec pavucontrol
+bindsym $mod+ctrl+n exec nautilus
+bindsym $mod+ctrl+l exec bash ~/Documents/bash/lockscreen/lockscreen.sh
+bindsym $mod+ctrl+d exec bash ~/Documents/bash/dockterm/dockterm.sh
+bindsym $mod+ctrl+s exec termite -e "nvim"
 bindsym Print exec flameshot gui
-bindsym Mod1+b exec ~/Documents/bash/background/background.sh
-bindsym Mod1+m exec sleep 1 && xset dpms force off
+bindsym $mod+b exec ~/Documents/bash/background/background.sh
+bindsym $mod+m exec sleep 1 && xset dpms force off
 
 # system applications
 exec --no-startup-id compton --config ~/.config/compton.conf
 #exec --no-startup-id xrandr --auto --output $m1 --mode 1920x1080 --right-of $m2
 exec --no-startup-id bash ~/.config/polybar/launch.sh
-exec --no-startup-id wal -i ~/Wallpapers/linuxterminal.png
+exec --no-startup-id wal -i ~/Wallpapers/ring.png
+
+exec --no-startup-id nm-applet
 
 exec_always ~/Documents/python/i3scripts/autoname_workspaces.py
