--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -25,6 +25,7 @@ module-margin-right = 2
 
 font-0 = Verdana:pixelsize=12;0
 font-1 = Hurmit Nerd Font
+font-2 = Noto Color Emoji:scale=12
 
 modules-left = i3
 modules-center = xwindow
@@ -38,36 +39,37 @@ scroll-down = i3wm-wsprev
 
 [bar/top2]
 monitor = HDMI-1
-width = 100%                                             
-height = 30                                              
+width = 100%
+height = 30
+
+radius = 6.0
+fixed-center = falset
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
                                                          
-radius = 6.0                                             
-fixed-center = falset                                    
+border-size = 4
+border-color =
+padding-left = 0
+padding-right = 2
                                                          
-background = ${colors.background}                        
-foreground = ${colors.foreground}                        
-                                                         
-line-size = 3                                            
-line-color = #f00                                        
-                                                         
-border-size = 4                                          
-border-color =                                           
-padding-left = 0                                         
-padding-right = 2                                        
-                                                         
-module-margin-left = 1                                   
-module-margin-right = 2                                  
-                                                         
-font-0 = Verdana:pixelsize=12;0                          
-font-1 = Hurmit Nerd Font                                
-                                                         
-modules-left = i3                                        
-modules-center = xwindow                                 
+module-margin-left = 1
+module-margin-right = 2     
+
+font-0 = Verdana:pixelsize=12;0
+font-1 = Hurmit Nerd Font
+font-2 = Noto Color Emoji:scale=12
+
+modules-left = i3
+modules-center = xwindow
 modules-right = github filesystem eth memory cpu gpu date
                                                          
-tray-position = right                                    
-tray-padding = 2                                         
+tray-position = right
+tray-padding = 2
                                                          
-scroll-up = i3wm-wsnext                                  
-scroll-down = i3wm-wsprev                                
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
 
