--- a/.config/polybar/module.ini
+++ b/.config/polybar/module.ini
@@ -12,12 +12,12 @@ token = ${file:~/.config/.github-notifications}
 empty-notifications = false
 interval = 100
 api-url = https://api.github.com/
-label = : %notifications%
+label = : %notifications%
 
 
 [module/gpu]
 type = custom/script
-format-prefix = ": "
+format-prefix = "⚙: "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits | awk '{ print ""$1"","%"}'
 format-underline = ${colors.secondary}
