Add vscode opacity

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -46,7 +46,8 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [
-  "85:class_g = 'Termite'"
+  "85:class_g = 'Termite'",
+  "95:class_g = 'Code'"
 ];
 
 # Fading
