--- a/.config/i3/config
+++ b/.config/i3/config
@@ -132,16 +132,16 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 #Monitor Wokspace
-workspace number $ws1 output $m1 
-workspace number $ws2 output $m1
-workspace number $ws3 output $m1
-workspace number $ws4 output $m1
+#workspace number $ws1 output $m1 
+#workspace number $ws2 output $m1
+#workspace number $ws3 output $m1
+#workspace number $ws4 output $m1
 
-workspace number $ws5 output $m2
-workspace number $ws6 output $m2
-workspace number $ws7 output $m2
-workspace number $ws8 output $m2
-workspace number $ws9 output $m2
+#workspace number $ws5 output $m2
+#workspace number $ws6 output $m2
+#workspace number $ws7 output $m2
+#workspace number $ws8 output $m2
+#workspace number $ws9 output $m2
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -202,4 +202,4 @@ exec --no-startup-id wal -i ~/Wallpapers/ring.png
 
 exec --no-startup-id nm-applet
 
-exec_always ~/Documents/python/i3scripts/autoname_workspaces.py
+exec_always ~/Documents/python/i3scripts/autoname_workspaces.py --norenumber_workspaces
