Add glava, thanks to @ilsenatorov Co-authored-by: ilsenatorov <il.senatorov@gmail.com>

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -46,8 +46,7 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [
-  "85:class_g = 'Termite'",
-  "95:class_g = 'Code'"
+  "99:class_g = 'Termite'"
 ];
 
 # Fading
