--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,14 +179,35 @@ gaps outer 15
 # floating rule's
 for_window [class="feh"] floating enable
 for_window [class="mpv"] floating enable
-for_window [class="zathura"] floating enable
+for_window [class="Sxiv"] floating enable
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -2% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
+
+# Set shut down, restart and locking features
+bindsym $mod+ctrl+l mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id ~/Documents/bash/lockscreen/lockscreen.sh, mode "default"
+    bindsym s exec --no-startup-id i3exit suspend, mode "default"
+    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
+    bindsym e exec --no-startup-id i3exit logout, mode "default"
+    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
+    bindsym r exec --no-startup-id i3exit reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+
+    # exit system mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 # application keybindings
-bindsym $mod+ctrl+g exec google-chrome-stable
+bindsym $mod+ctrl+g exec google-chrome-stable --password-store=basic
 bindsym $mod+ctrl+k exec keepassxc
 bindsym $mod+ctrl+p exec pavucontrol
 bindsym $mod+ctrl+n exec nautilus
-bindsym $mod+ctrl+l exec bash ~/Documents/bash/lockscreen/lockscreen.sh
+#bindsym $mod+ctrl+l exec bash ~/Documents/bash/lockscreen/lockscreen.sh
 bindsym $mod+ctrl+d exec bash ~/Documents/bash/dockterm/dockterm.sh
 bindsym $mod+ctrl+s exec termite -e "nvim"
 bindsym Print exec flameshot gui
@@ -199,7 +220,6 @@ exec --no-startup-id compton --config ~/.config/compton.conf
 #exec --no-startup-id xrandr --auto --output $m1 --mode 1920x1080 --right-of $m2
 exec --no-startup-id bash ~/.config/polybar/launch.sh
 exec --no-startup-id wal -i ~/Wallpapers/ring.png
-
-exec --no-startup-id nm-applet
+#exec --no-startup-id nm-applet
 
 exec_always ~/Documents/python/i3scripts/autoname_workspaces.py --norenumber_workspaces
