--- a/.config/i3/config
+++ b/.config/i3/config
@@ -174,12 +174,13 @@ bindsym $mod+r mode "resize"
 # gaps
 for_window [class="^.*"] border pixel 2 
 gaps inner 15 
-gaps outer 15
+#gaps outer 15
 
 # floating rule's
 for_window [class="feh"] floating enable
 for_window [class="mpv"] floating enable
 for_window [class="Sxiv"] floating enable
+for_window [instance="origin.exe"] floating enable
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -2% #decrease sound volume
