--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -25,7 +25,7 @@ blur-background = true;
 blur-background-frame = true;
 blur-background-fixed = true;
 
-blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 blur-method = "kawase";
 blur-strength = 12;
 
@@ -35,7 +35,7 @@ menu-opacity = 0.8;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
-alpha-step = 0.06;
+alpha-step = 0.0000000000001;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 
@@ -46,7 +46,7 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [
-  "99:class_g = 'Termite'"
+  "100:class_g = 'Termite'"
 ];
 
 # Fading
