Add mouse support an vue.js

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -3,6 +3,12 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# shell
+set-option -g default-shell "/bin/bash"
+
+# mouse
+set -g mouse on
+
 # size to lowest screen
 set-window-option -g aggressive-resize on
 
