Add tmux multitype

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -6,6 +6,11 @@ bind-key C-a send-prefix
 # shell
 set-option -g default-shell "/bin/bash"
 
+# multitype
+bind-key C-x setw synchronize-panes
+setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
+setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
+
 # mouse
 set -g mouse on
 
