Add theme from https://github.com/jimeh/tmux-themepack

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# theme
+source-file "${HOME}/tools/tmux-themepack/powerline/block/cyan.tmuxtheme"
+
 # shell
 set-option -g default-shell "/bin/bash"
 
