fix tmux start at number 1

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -9,6 +9,9 @@ source-file "${HOME}/tools/tmux-themepack/powerline/block/cyan.tmuxtheme"
 # shell
 set-option -g default-shell "/bin/bash"
 
+# start at 1
+set -g base-index 1
+
 # multitype
 bind-key C-x setw synchronize-panes
 setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
