--- a/.config/termite/config
+++ b/.config/termite/config
@@ -4,49 +4,50 @@
 foreground        = #f8f8f2
 foreground_bold   = #f8f8f2
 cursor            = #f8f8f2
-cursor_foreground = #272822
+	cursor_foreground = #272822
 background        = rgba(39, 40, 34, 0.8)
 
 # black
-color0  = #272822
-color8  = #75715e
+	color0  = #272822
+	color8  = #75715e
 
 # red
-color1  = #f92672
-color9  = #f92672
+	color1  = #f92672
+	color9  = #f92672
 
 # green
-color2  = #a6e22e
-color10 = #a6e22e
+	color2  = #a6e22e
+	color10 = #a6e22e
 
 # yellow
-color3  = #f4bf75
-color11 = #f4bf75
+	color3  = #f4bf75
+	color11 = #f4bf75
 
 # blue
-color4  = #66d9ef
-color12 = #66d9ef
+	color4  = #66d9ef
+	color12 = #66d9ef
 
 # magenta
-color5  = #ae81ff
-color13 = #ae81ff
+	color5  = #ae81ff
+	color13 = #ae81ff
 
 # cyan
-color6  = #a1efe4
-color14 = #a1efe4
+	color6  = #a1efe4
+	color14 = #a1efe4
 
 # white
-color7  = #f8f8f2
-color15 = #f9f8f5
+	color7  = #f8f8f2
+	color15 = #f9f8f5
 
-[options]
-scroll_on_output = false
-scroll_on_keystroke = true
-audible_bell = false
-mouse_autohide = true
-allow_bold = true
-dynamic_title = true
-urgent_on_bell = true
-clickable_url = true
-cursor_blink = on
-font = 9
+	[options]
+	scroll_on_output = false
+	scroll_on_keystroke = true
+	audible_bell = false
+	mouse_autohide = true
+	allow_bold = true
+	dynamic_title = true
+	urgent_on_bell = true
+	clickable_url = true
+	cursor_blink = on
+#font = Hurmit Nerd Font, bold 9
+	font = SauceCodePro Nerd Font, Regular 10
