Add tmux vi movement

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -17,8 +17,12 @@ bind-key C-x setw synchronize-panes
 setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 
-# mouse
+# movement
 set -g mouse on
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # size to lowest screen
 set-window-option -g aggressive-resize on
