--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,16 +1,17 @@
 {
-  "tsserver.formatOnType": true,
-  "suggest.noselect": false,
-  "coc.preferences.formatOnSaveFiletypes": [
-    "javascript",
-    "typescript",
-    "typescriptreact",
-    "json",
-    "javascriptreact",
-    "typescript.tsx",
-    "graphql",
-    "php",
-    "blade.php",
-    "vue"
-  ]
+	"java.home": "/home/michael/.sdkman/candidates/java/current",
+	"tsserver.formatOnType": true,
+	"suggest.noselect": false,
+	"coc.preferences.formatOnSaveFiletypes": [
+		"javascript",
+		"typescript",
+		"typescriptreact",
+		"json",
+		"javascriptreact",
+		"typescript.tsx",
+		"graphql",
+		"php",
+		"blade.php",
+		"vue"
+	]
 }
