--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -27,3 +27,5 @@ bind l select-pane -R
 # size to lowest screen
 set-window-option -g aggressive-resize on
 
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
