--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -4,7 +4,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # theme
-source-file "${HOME}.config/tmux-themepack/powerline/block/cyan.tmuxtheme"
+source-file "${HOME}/.config/tmux-themepack/powerline/block/cyan.tmuxtheme"
 
 # shell
 set-option -g default-shell "/bin/bash"
