--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,5 +13,6 @@
 		"php",
 		"blade.php",
 		"vue"
-	]
+  ],
+  "java.format.settings.url": "/data/home/michael/.config/coc/extensions/node_modules/redhat.java/eclipse-formatter.xml"
 }
