vim switch to formating keybinding

--- a/.config/polybar/module.ini
+++ b/.config/polybar/module.ini
@@ -147,7 +147,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = ": " 
+format-prefix = ": "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline =  ${colors.secondary}
 label = %percentage%%
@@ -187,12 +187,12 @@ type = internal/network
 interface = enp3s0
 interval = 3.0
 
-format-connected-underline = ${colors.secondary}
+;format-connected-underline = ${colors.secondary}
 format-connected-prefix = ""
 format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-;format-disconnected = "asd"
+;label-connected = %local_ip%
+label-connected = 歷
+format-disconnected = 轢
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
@@ -247,103 +247,103 @@ interval = 1
 click-left = cmus-remote --pause
 click-right = cmus-remote --stop\
 
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ADP1
-full-at = 98
+	[module/battery]
+	type = internal/battery
+	battery = BAT0
+	adapter = ADP1
+	full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-format-charging-underline =  #456771
+	format-charging = <animation-charging> <label-charging>
+	format-charging-underline =  #456771
 
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+	format-discharging = <ramp-capacity> <label-discharging>
+	format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+	format-full-prefix = " "
+	format-full-prefix-foreground = ${colors.foreground-alt}
+	format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+	ramp-capacity-0 = 
+	ramp-capacity-1 = 
+	ramp-capacity-2 = 
+	ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+	animation-charging-0 = 
+	animation-charging-1 = 
+	animation-charging-2 = 
+	animation-charging-foreground = ${colors.foreground-alt}
+	animation-charging-framerate = 750
 
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
+	[module/temperature]
+	type = internal/temperature
+	thermal-zone = 0
+	warn-temperature = 60
 
-format = <ramp> <label>
-format-underline =  #456771
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+	format = <ramp> <label>
+	format-underline =  #456771
+	format-warn = <ramp> <label-warn>
+	format-warn-underline = ${self.format-underline}
 
-label =  %temperature-c%
-label-warn =  %temperature-c%
-label-warn-foreground = ${colors.foreground}
+	label =  %temperature-c%
+	label-warn =  %temperature-c%
+	label-warn-foreground = ${colors.foreground}
 
-ramp-0 = 
-;ramp-1 = 
-;ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+	ramp-0 = 
+	;ramp-1 = 
+	;ramp-2 = 
+	ramp-foreground = ${colors.foreground-alt}
 
 
-[module/powermenu]
-type = custom/menu
+	[module/powermenu]
+	type = custom/menu
 
-format-spacing = 1
+	format-spacing = 1
 
-label-open = 
-label-open-foreground = ${colors.secondary}
-label-close =  cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
+	label-open = 
+	label-open-foreground = ${colors.secondary}
+	label-close =  cancel
+	label-close-foreground = ${colors.secondary}
+	label-separator = |
+	label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
+	menu-0-0 = reboot
+	menu-0-0-exec = menu-open-1
+	menu-0-1 = power off
+	menu-0-1-exec = menu-open-2
 
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+	menu-1-0 = cancel
+	menu-1-0-exec = menu-open-0
+	menu-1-1 = reboot
+	menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+	menu-2-0 = power off
+	menu-2-0-exec = sudo poweroff
+	menu-2-1 = cancel
+	menu-2-1-exec = menu-open-0
 
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+	[settings]
+	screenchange-reload = true
+	;compositing-background = xor
+	;compositing-background = screen
+	;compositing-foreground = source
+	;compositing-border = over
 
-[module/kernel-version]
-type = custom/script
-exec = uname -r
-interval = 1024
-format-underline =  #456771
-format-prefix = " "
-format-prefix-foreground = #666
+	[module/kernel-version]
+	type = custom/script
+	exec = uname -r
+	interval = 1024
+	format-underline =  #456771
+	format-prefix = " "
+	format-prefix-foreground = #666
 
-[module/time]
-type = custom/script
-exec = date
-interval = 1
-format-underline =  #456771
-format-prefix = " "
-format-prefix-foreground = #666
+	[module/time]
+	type = custom/script
+	exec = date
+	interval = 1
+	format-underline =  #456771
+	format-prefix = " "
+	format-prefix-foreground = #666
 
-[global/wm]
-margin-top = 0
-margin-bottom = 0
+	[global/wm]
+	margin-top = 0
+	margin-bottom = 0
