Add rofi icons, font

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -46,7 +46,8 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [
-  "100:class_g = 'Termite'"
+  "100:class_g = 'Termite'",
+  "100:class_g = 'Alacritty'"
 ];
 
 # Fading
