--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,19 +1,17 @@
 {
-	"java.home": "/home/michael/.sdkman/candidates/java/current",
-	"tsserver.formatOnType": true,
-	"suggest.noselect": false,
-	"coc.preferences.formatOnSaveFiletypes": [
-		"javascript",
-		"typescript",
-		"typescriptreact",
-		"json",
-		"javascriptreact",
-		"typescript.tsx",
-		"graphql",
-		"php",
-		"blade.php",
-		"vue",
-		"coc-flutter"
+  "java.home": "/home/michael/.sdkman/candidates/java/current",
+  "tsserver.formatOnType": true,
+  "suggest.noselect": false,
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "typescript",
+    "typescriptreact",
+    "json",
+    "javascriptreact",
+    "typescript.tsx",
+    "graphql",
+    "php",
+    "blade.php"
   ],
   "java.format.settings.url": "/data/home/michael/.config/coc/extensions/node_modules/redhat.java/eclipse-formatter.xml"
 }
