--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -17,6 +17,9 @@ bind-key C-x setw synchronize-panes
 setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 
+# shell
+set-option -g default-shell /bin/fish
+
 # movement
 set -g mouse on
 bind h select-pane -L
