--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,6 +29,8 @@ font-2 = Noto Color Emoji:scale=12
 
 modules-left = i3
 modules-center = xwindow
+;modules-left = workspaces-xmonad
+;modules-center = title-xmonad
 
 tray-position = right
 tray-padding = 2
@@ -64,6 +66,9 @@ font-2 = Noto Color Emoji:scale=12
 
 modules-left = i3
 modules-center = xwindow
+;modules-left = workspaces-xmonad
+;modules-center = title-xmonad
+
 modules-right = github filesystem eth memory cpu gpu date
 
 tray-position = right
