--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 
 # shell
-set-option -g default-shell /bin/fish
+set-option -g default-shell /usr/bin/fish
 
 # movement
 set -g mouse on
