Switch to gruvbox colors

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -21,7 +21,7 @@ shadow-exclude = [
 # shadow-exclude-reg = "x10+0+0";
 # xinerama-shadow-crop = true;
 
-blur-background = true;
+#blur-background = true;
 blur-background-frame = true;
 blur-background-fixed = true;
 
@@ -45,10 +45,10 @@ blur-background-exclude = [
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 
-opacity-rule = [
-  "100:class_g = 'Termite'",
-  "99:class_g = 'Alacritty'"
-];
+#opacity-rule = [
+	#"100:class_g = 'Termite'",
+  #"99:class_g = 'Alacritty'"
+#];
 
 # Fading
 fading = true;
