--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "java.home": "/home/michael/.sdkman/candidates/java/current",
+  "java.home": "/data/home/michael/devtools/jdk-11.0.8+10",
   "tsserver.formatOnType": true,
   "suggest.noselect": false,
   "java.format.settings.url": "/data/home/michael/.config/coc/extensions/node_modules/redhat.java/eclipse-formatter.xml",
