--- a/.config/i3/config
+++ b/.config/i3/config
@@ -221,7 +221,7 @@ bindsym $mod+ctrl+e exec emoji
 #exec --no-startup-id xrandr --auto --output HDMI-1 --right-of HDMI-0
 exec --no-startup-id compton --config ~/.config/compton.conf
 exec --no-startup-id bash ~/.config/polybar/launch.sh
-exec --no-startup-id ~/Documents/bash/background/background.sh ~/Wallpapers/plant.png
+exec --no-startup-id ~/Documents/bash/background/background.sh ~/Wallpapers/saturn.jpg
 #exec --no-startup-id nm-applet
 exec --no-startup-id pacmd load-module module-loopback latency_msec=1
 
