--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,10 @@ set-window-option -g aggressive-resize on
 # true color
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# todo
+bind -r T split-window -b -p 35 -h -c "#{pane_current_path}" "nvim ~/Documents/todo.md"
+
+
 # theme
 ## COLORSCHEME: gruvbox dark (medium)
 set-option -g status "on"
