--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,7 @@
 update_check_interval 0
-font_family      Victor Mono Medium Nerd Font Complete Mono
-bold_font        Victor Mono Bold Nerd Font Complete Mono
-italic_font      Victor Mono Italic Nerd Font Complete Mono
-bold_italic_font Victor Mono Bold Italic Nerd Font Complete Mono
+font_family      Victor Mono Medium Nerd Font Complete Mono Windows Compatible
+bold_font        Victor Mono Bold Nerd Font Complete Mono Windows Compatible
+italic_font      Victor Mono Italic Nerd Font Complete Mono Windows Compatible
 font_size 12.0
 
 enable_audio_bell no
