Change color theme tokyonight and add wezterm

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,48 +1,52 @@
 update_check_interval 0
-font_family      Victor Mono Medium Nerd Font Complete Mono Windows Compatible
-bold_font        Victor Mono Bold Nerd Font Complete Mono Windows Compatible
-italic_font      Victor Mono Italic Nerd Font Complete Mono Windows Compatible
-font_size 12.0
-
 enable_audio_bell no
 
-# gruvbox-dark colorscheme for kitty
-# snazzy theme used as base
+shell /usr/bin/fish
 
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
+font_family      SauceCodePro Nerd Font
+bold_font        SauceCodePro Nerd Font
+italic_font      SauceCodePro Nerd Font
+font_size 11.0
 
-# black
-color0   #272727
-color8   #928373
 
-# red
-color1   #cc231c
-color9   #fb4833
+## name: Tokyo Night Storm
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_storm.conf
+background #24283b
+foreground #c0caf5
+selection_background #364A82
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
 
-# green
-color2   #989719
-color10  #b8ba25
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #1f2335
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #1D202F
 
-# yellow
-color3   #d79920
-color11  #fabc2e
+# normal
+color0 #1D202F
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
-# blue
-color4  #448488
-color12 #83a597
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
 
-# magenta
-color5   #b16185
-color13  #d3859a
-
-# cyan
-color6   #689d69
-color14  #8ec07b
-
-# white
-color7   #a89983
-color15  #ebdbb2
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
