--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,11 +25,13 @@ bind l select-pane -R
 set-window-option -g aggressive-resize on
 
 # true color
-set -ga terminal-overrides ",xterm-256color:Tc"
+#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # todo
 bind -r T split-window -b -p 35 -h -c "#{pane_current_path}" "nvim ~/Documents/todo.md"
-
 
 # theme
 ## COLORSCHEME: gruvbox dark (medium)
